--- a/package.json
+++ b/package.json
@@ -37,5 +37,9 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anthonyharold67/tailwind-template"
+  },
 }
